--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="contenedor" data-accept="metal">🔩 Metales y Latas</div>
       <div class="contenedor" data-accept="reciclable">🔁 Reciclable</div>
       <div class="contenedor" data-accept="inorganico">🧹 Inorgánico</div>
-      <div class="contenedor" data-accept="no-metal">💡 Electronicos</div>
+      <div class="contenedor" data-accept="electronico">💡 Electronicos</div>
     </div>
   </div>
 
